--- a/inventory sysystem.ipynb
+++ b/inventory sysystem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,37 +17,28 @@
     "\n",
     "def generateSQL(tablename, columns, values):\n",
     "    \n",
-    "    sql= ' insert into ' + tableName + ' (' + columns +  ' ) values (' + values + ');'\n",
-    "    print(sql)\n",
+    "    sql= ' insert into ' + tablename + ' (' + columns +  ' ) values (' + values + ');'\n",
+    "    \n",
     "    return sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\ncreate table salesOrder (\\n    customerNumber uuid,\\n    orderNumber uuid,\\n    comments varchar(200),\\n    orderDate timestamp,\\n    orderType varchar(20),\\n    shipDate timestamp,\\n    discount float,\\n    quantity integer,\\n    productNumber varchar(50));\\n'"
-      ]
-     },
-     "execution_count": 291,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Customer:\n",
     "    \n",
-    "    columns = {'customerNumber',\n",
+    "    columns = ['customerNumber',\n",
     "     'customerName',           \n",
     "    'phoneNumber',\n",
     "    'postalCode',\n",
     "    'locale',\n",
     "    'dateCreated',\n",
-    "    'email'}\n",
+    "    'email']\n",
+    "    \n",
+    "    salesOrders = []\n",
     "\n",
     "    \n",
     "    def __init__(self):\n",
@@ -59,6 +50,9 @@
     "        self.locale = 'en-US.utf-8'\n",
     "        self.dateCreated = getToday()\n",
     "        self.email = randomString(4) + '@' + randomString(4) + \".com\"\n",
+    "        \n",
+    "        for i in range(random.randint(1,5)):\n",
+    "            self.salesOrders.append(SalesOrder(self.customerNumber))\n",
     "        \n",
     "    def getColumns(self):\n",
     "        return self.columns\n",
@@ -72,6 +66,9 @@
     "            self.locale,\n",
     "            self.dateCreated,\n",
     "            self.email]\n",
+    "\n",
+    "    def getSalesOrders(self):\n",
+    "        return self.salesOrders\n",
     "     \n",
     "    \n",
     "'''    \n",
@@ -92,19 +89,45 @@
     "#class Product:\n",
     "    \n",
     "\n",
-    "'''\n",
+    "\n",
     "class SalesOrder:\n",
     "\n",
-    "    self.customerNumber\n",
-    "    self.orderNumber\n",
-    "    self.comments\n",
-    "    self.orderDate\n",
-    "    self.orderType\n",
-    "    self.shipDate\n",
-    "    self.discount\n",
-    "    self.quantity\n",
-    "    self.productNumber\n",
-    "'''    \n",
+    "    columns =  ['customerNumber',\n",
+    "        'orderNumber' ,\n",
+    "        'comments' ,\n",
+    "        'orderDate' ,\n",
+    "        'orderType' ,\n",
+    "        'shipDate'  ,\n",
+    "        'discount'  ,\n",
+    "        'quantity'  ,\n",
+    "        'productNumber']\n",
+    "\n",
+    "    def __init__(self, customerNumber):\n",
+    "\n",
+    "        self.customerNumber = customerNumber\n",
+    "        self.orderNumber = uuid.uuid1()\n",
+    "        self.comments = randomString(20)\n",
+    "        self.orderDate =  getToday()\n",
+    "        self.orderType = \"sale\"\n",
+    "        self.shipDate  =  getToday() \n",
+    "        self.discount  = 0\n",
+    "        self.quantity  = random.randint(1,100)\n",
+    "        self.productNumber = uuid.uuid1()  \n",
+    "        \n",
+    "    def getColumns(self):\n",
+    "        return self.columns    \n",
+    "        \n",
+    "        \n",
+    "    def getValues(self):\n",
+    "        return  [ self.customerNumber,\n",
+    "        self.orderNumber ,\n",
+    "        self.comments ,\n",
+    "        self.orderDate ,\n",
+    "        self.orderType ,\n",
+    "        self.shipDate  ,\n",
+    "        self.discount  ,\n",
+    "        self.quantity  ,\n",
+    "        self.productNumber ]\n",
     "\n",
     "'''\n",
     "create table salesOrder (\n",
@@ -122,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,28 +175,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
     "def randomString(length):\n",
+    "    \n",
     "    char=\"\"\n",
     "    for i in range(length):\n",
-    "        char = char + chr(random.randint(65,65+25))\n",
+    "        char = char + chr(random.randint(97,123))\n",
     "    return char"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def commaCheck(field):\n",
-    "    \n",
-    "     print(\"type=\", type(field))\n",
     "    \n",
     "     if isinstance(field, uuid.UUID):\n",
     "        return   str(field)  \n",
@@ -187,85 +209,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generateCustomers(conn):\n",
-    "    for i in range(5):\n",
+    "    for i in range(2000):\n",
     "        \n",
     "        customer = Customer()\n",
+    "       \n",
     "        columns = ','.join([col for col in customer.getColumns()])\n",
     "        \n",
     "        values = ','.join([\"'\" + commaCheck(value) + \"'\" for value in customer.getValues()])\n",
     "\n",
     "        sql=generateSQL(\"customers\",columns,values)\n",
+    "       \n",
     "\n",
     "        curs = conn.cursor()\n",
     "        curs.execute(sql)\n",
-    "        result = curs.fetchall()\n",
-    "        print(result)\n",
+    "        \n",
+    "        generateOrders(customer.getSalesOrders(),conn)\n",
+    "       \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connection String: jdbc:postgresql://paris2x:5432/inventory\n",
-      "type= <class 'uuid.UUID'>\n",
-      "type= <class 'str'>\n",
-      "type= <class 'int'>\n",
-      "type= <class 'str'>\n",
-      "type= <class 'str'>\n",
-      "type= <class 'str'>\n",
-      "type= <class 'str'>\n",
-      " insert into customers (phoneNumber,postalCode,customerNumber,locale,email,dateCreated,customerName ) values ('2e9cb3fe-e3ad-11ea-ab7a-0ec120e133fc','MEQSENHOCPTORFETMLIO','4016663','EUPI','en-US.utf-8','2020-08-21','MREH@ARET.com');\n"
-     ]
-    },
-    {
-     "ename": "DatabaseError",
-     "evalue": "org.postgresql.util.PSQLException: ERROR: invalid input syntax for uuid: \"4016663\"\n  Position: 173",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m~/py372/lib/python3.7/site-packages/_jpype.cpython-37m-x86_64-linux-gnu.so\u001b[0m in \u001b[0;36morg.postgresql.jdbc.PgPreparedStatement.execute\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m~/py372/lib/python3.7/site-packages/_jpype.cpython-37m-x86_64-linux-gnu.so\u001b[0m in \u001b[0;36morg.postgresql.jdbc.PgPreparedStatement.executeWithFlags\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m~/py372/lib/python3.7/site-packages/_jpype.cpython-37m-x86_64-linux-gnu.so\u001b[0m in \u001b[0;36morg.postgresql.jdbc.PgStatement.execute\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m~/py372/lib/python3.7/site-packages/_jpype.cpython-37m-x86_64-linux-gnu.so\u001b[0m in \u001b[0;36morg.postgresql.jdbc.PgStatement.executeInternal\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m~/py372/lib/python3.7/site-packages/_jpype.cpython-37m-x86_64-linux-gnu.so\u001b[0m in \u001b[0;36morg.postgresql.core.v3.QueryExecutorImpl.execute\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m~/py372/lib/python3.7/site-packages/_jpype.cpython-37m-x86_64-linux-gnu.so\u001b[0m in \u001b[0;36morg.postgresql.core.v3.QueryExecutorImpl.processResults\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m~/py372/lib/python3.7/site-packages/_jpype.cpython-37m-x86_64-linux-gnu.so\u001b[0m in \u001b[0;36morg.postgresql.core.v3.QueryExecutorImpl.receiveErrorResponse\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mException\u001b[0m: Java Exception",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31morg.postgresql.util.PSQLException\u001b[0m         Traceback (most recent call last)",
-      "\u001b[0;32m~/py372/lib/python3.7/site-packages/jaydebeapi/__init__.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, operation, parameters)\u001b[0m\n\u001b[1;32m    533\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 534\u001b[0;31m             \u001b[0mis_rs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_prep\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    535\u001b[0m         \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31morg.postgresql.util.PSQLException\u001b[0m: org.postgresql.util.PSQLException: ERROR: invalid input syntax for uuid: \"4016663\"\n  Position: 173",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mDatabaseError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-296-9a625e8cb99f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-296-9a625e8cb99f>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mconn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mgenerateCustomers\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-295-f0c644e82913>\u001b[0m in \u001b[0;36mgenerateCustomers\u001b[0;34m(conn)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mcurs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mcurs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcurs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/py372/lib/python3.7/site-packages/jaydebeapi/__init__.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, operation, parameters)\u001b[0m\n\u001b[1;32m    534\u001b[0m             \u001b[0mis_rs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_prep\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    535\u001b[0m         \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 536\u001b[0;31m             \u001b[0m_handle_sql_exception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    537\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_rs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    538\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_rs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_prep\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetResultSet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/py372/lib/python3.7/site-packages/jaydebeapi/__init__.py\u001b[0m in \u001b[0;36m_handle_sql_exception_jpype\u001b[0;34m()\u001b[0m\n\u001b[1;32m    163\u001b[0m         \u001b[0mexc_type\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mInterfaceError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    164\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 165\u001b[0;31m     \u001b[0mreraise\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexc_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    166\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    167\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_jdbc_connect_jpype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjclassname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdriver_args\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlibs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/py372/lib/python3.7/site-packages/jaydebeapi/__init__.py\u001b[0m in \u001b[0;36mreraise\u001b[0;34m(tp, value, tb)\u001b[0m\n\u001b[1;32m     55\u001b[0m             \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtb\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/py372/lib/python3.7/site-packages/jaydebeapi/__init__.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, operation, parameters)\u001b[0m\n\u001b[1;32m    532\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_set_stmt_parms\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_prep\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    533\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 534\u001b[0;31m             \u001b[0mis_rs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_prep\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    535\u001b[0m         \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    536\u001b[0m             \u001b[0m_handle_sql_exception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mDatabaseError\u001b[0m: org.postgresql.util.PSQLException: ERROR: invalid input syntax for uuid: \"4016663\"\n  Position: 173"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def generateOrders(orders,conn):\n",
+    "    for order in orders:\n",
+    "         \n",
+    "        columns = ','.join([col for col in order.getColumns()])\n",
+    "        \n",
+    "        values = ','.join([\"'\" + commaCheck(value) + \"'\" for value in order.getValues()])\n",
+    "\n",
+    "        sql=generateSQL(\"salesOrder\",columns,values)\n",
+    "   \n",
+    "        \n",
+    "        curs = conn.cursor()\n",
+    "        curs.execute(sql) \n",
+    "\n",
+    "         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def main():\n",
     "    conn=connect()\n",
     "    generateCustomers(conn)\n",
     "   \n",
-    "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
@@ -277,7 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "str(uuid.uuid1())"
+    " "
    ]
   },
   {
