--- a/inventory sysystem.ipynb
+++ b/inventory sysystem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 533,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 534,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\ncreate table orders (\\n    customerNumber uuid,\\n    orderNumber uuid,\\n    comments varchar(200),\\n    orderDate timestamp,\\n    orderType varchar(20),\\n    shipDate timestamp,\\n    discount float,\\n    quantity integer,\\n    productNumber varchar(50));\\n'"
+      ]
+     },
+     "execution_count": 534,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Customer:\n",
     "    \n",
@@ -130,7 +141,7 @@
     "        self.productNumber ]\n",
     "\n",
     "'''\n",
-    "create table salesOrder (\n",
+    "create table orders (\n",
     "    customerNumber uuid,\n",
     "    orderNumber uuid,\n",
     "    comments varchar(200),\n",
@@ -145,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 535,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 536,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,13 +196,13 @@
     "    \n",
     "    char=\"\"\n",
     "    for i in range(length):\n",
-    "        char = char + chr(random.randint(97,123))\n",
+    "        char = char + chr(random.randint(97,122))\n",
     "    return char"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 537,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 538,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 539,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +257,7 @@
     "        \n",
     "        values = ','.join([\"'\" + commaCheck(value) + \"'\" for value in order.getValues()])\n",
     "\n",
-    "        sql=generateSQL(\"salesOrder\",columns,values)\n",
+    "        sql=generateSQL(\"orders\",columns,values)\n",
     "   \n",
     "        \n",
     "        curs = conn.cursor()\n",
@@ -257,9 +268,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 540,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection String: jdbc:postgresql://paris2x:5432/inventory\n"
+     ]
+    }
+   ],
    "source": [
     "def main():\n",
     "    conn=connect()\n",
