--- a/generateCustomersJSON.ipynb
+++ b/generateCustomersJSON.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 607,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 624,
+   "execution_count": 608,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "'\\ncreate table orders (\\n    customerNumber uuid,\\n    orderNumber uuid,\\n    comments varchar(200),\\n    orderDate timestamp,\\n    orderType varchar(20),\\n    shipDate timestamp,\\n    discount float,\\n    quantity integer,\\n    productNumber varchar(50));\\n'"
       ]
      },
-     "execution_count": 624,
+     "execution_count": 608,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 625,
+   "execution_count": 609,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 626,
+   "execution_count": 610,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 627,
+   "execution_count": 611,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 628,
+   "execution_count": 612,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 613,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,15 +285,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 614,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'customerNumber': UUID('954a2f3c-e844-11ea-ab7a-0ec120e133fc'), 'customerName': 'qpfxkydoyspdalvmzamm', 'phoneNumber': 7998906, 'postalCode': 'thry', 'locale': 'en-US.utf-8', 'dateCreated': '2020-08-27'}\n",
-      "{'customerNumber': UUID('954a2f45-e844-11ea-ab7a-0ec120e133fc'), 'customerName': 'srswnlqknklxigznpynw', 'phoneNumber': 6507156, 'postalCode': 'yxwh', 'locale': 'en-US.utf-8', 'dateCreated': '2020-08-27'}\n"
+      "{'customerNumber': UUID('58768bc4-e834-11ea-ab7a-0ec120e133fc'), 'customerName': 'ynypwkpobzqzxcrcnocc', 'phoneNumber': 6624061, 'postalCode': 'dhfq', 'locale': 'en-US.utf-8', 'dateCreated': '2020-08-27'}\n",
+      "{'customerNumber': UUID('58768bcf-e834-11ea-ab7a-0ec120e133fc'), 'customerName': 'odtyjkxjatraacslbdie', 'phoneNumber': 7777269, 'postalCode': 'noqi', 'locale': 'en-US.utf-8', 'dateCreated': '2020-08-27'}\n"
      ]
     }
    ],
