--- a/generateCustomers.ipynb
+++ b/generateCustomers.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import date,timedelta\n",
     "import uuid\n",
-    "import jaydebeapi, os\n",
+    "\n",
     "import random\n",
     "import simplejson as json\n",
     "\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
     "    \n",
     "    def __init__(self):\n",
     "        \n",
-    "        self.customernumber = str(uuid.uuid1())\n",
+    "        self.customernumber = str(random.randint(100,999))\n",
     "        self.customername = randomString(20)\n",
     "        self.phonenumber = random.randint(1000000,9000000)\n",
     "        self.postalcode = randomString(4)\n",
@@ -86,6 +86,8 @@
     "        return self.salesOrders\n",
     "     \n",
     "class SalesOrder:\n",
+    "    \n",
+    "    products = ['AA111', 'BB111', 'CC222', 'EE333', 'FF4444']\n",
     "\n",
     "    columns =  ['customernumber',\n",
     "        'ordernumber' ,\n",
@@ -100,14 +102,14 @@
     "    def __init__(self, customerNumber):\n",
     "\n",
     "        self.customernumber = customerNumber\n",
-    "        self.ordernumber = str(uuid.uuid1())\n",
-    "        self.comments = randomString(20)\n",
+    "        self.ordernumber = str(random.randint(100,999))\n",
+    "        self.comments = randomString(10)\n",
     "        self.orderdate =  getToday()\n",
     "        self.ordertype = \"sale\"\n",
     "        self.shipdate  =  (date.today() + timedelta(days=random.randint(3,14))).isoformat()\n",
     "        self.discount  = random.random()\n",
     "        self.quantity  = random.randint(1,100)\n",
-    "        self.productnumber = str(uuid.uuid1())  \n",
+    "        self.productnumber = self.products[random.randint(0,4)]  \n",
     "        \n",
     "    def getColumns(self):\n",
     "        return self.columns    \n",
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,12 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generateCustomers(c,o,format):\n",
-    "    for i in range(2):        \n",
+    "    for i in range(5):        \n",
     "        customer = Customer()\n",
     "       \n",
     "        columns = ','.join([col for col in customer.getColumns()])\n",
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,21 +216,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "insert into customers (customernumber,customername,phonenumber,postalcode,locale,datecreated,email) values ('5d2b742e-fcaa-11ea-ab7a-0ec120e133fc','zmueovtgomhuodnxykru','5958321','iual','','2020-09-22','brwl@ivye.com');\n",
-      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('5d2b742e-fcaa-11ea-ab7a-0ec120e133fc','5d2b742f-fcaa-11ea-ab7a-0ec120e133fc','mcngbjyvwgugyyoxfmpp','2020-09-22','sale','2020-10-05','0.7447697120821644','9','5d2b7430-fcaa-11ea-ab7a-0ec120e133fc');\n",
-      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('5d2b742e-fcaa-11ea-ab7a-0ec120e133fc','5d2b7431-fcaa-11ea-ab7a-0ec120e133fc','vxvumhgwrbqunybpcpsf','2020-09-22','sale','2020-09-29','0.7003176040848438','55','5d2b7432-fcaa-11ea-ab7a-0ec120e133fc');\n",
-      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('5d2b742e-fcaa-11ea-ab7a-0ec120e133fc','5d2b7433-fcaa-11ea-ab7a-0ec120e133fc','turhfftpoaudutykjvvc','2020-09-22','sale','2020-09-26','0.22819382130119703','92','5d2b7434-fcaa-11ea-ab7a-0ec120e133fc');\n",
-      "insert into customers (customernumber,customername,phonenumber,postalcode,locale,datecreated,email) values ('5d2b7435-fcaa-11ea-ab7a-0ec120e133fc','xpqyaiycptgceffawhtt','2696748','eyzy','','2020-09-22','kavn@hwut.com');\n",
-      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('5d2b7435-fcaa-11ea-ab7a-0ec120e133fc','5d2b7436-fcaa-11ea-ab7a-0ec120e133fc','vahghkmremftlayqiewt','2020-09-22','sale','2020-09-27','0.648621894018958','85','5d2b7437-fcaa-11ea-ab7a-0ec120e133fc');\n",
-      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('5d2b7435-fcaa-11ea-ab7a-0ec120e133fc','5d2b7438-fcaa-11ea-ab7a-0ec120e133fc','ujwpdiwsoaxfpoetglgf','2020-09-22','sale','2020-09-27','0.2551485676079057','26','5d2b7439-fcaa-11ea-ab7a-0ec120e133fc');\n",
-      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('5d2b7435-fcaa-11ea-ab7a-0ec120e133fc','5d2b743a-fcaa-11ea-ab7a-0ec120e133fc','zmqacdutrwafllhpefwa','2020-09-22','sale','2020-10-03','0.6599368907633423','35','5d2b743b-fcaa-11ea-ab7a-0ec120e133fc');\n"
+      "insert into customers (customernumber,customername,phonenumber,postalcode,locale,datecreated,email) values ('568','tlwotasvgeuzylfckhwz','6960682','lkoo','','2020-09-27','xdam@hjzy.com');\n",
+      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('568','206','vwgyzgywai','2020-09-27','sale','2020-10-06','0.029680645656964266','76','FF4444');\n",
+      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('568','577','uufxusuiqo','2020-09-27','sale','2020-10-01','0.2244447507751104','44','BB111');\n",
+      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('568','281','mknfmkmmep','2020-09-27','sale','2020-10-06','0.03483009516842017','18','FF4444');\n",
+      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('568','545','owzxauutdw','2020-09-27','sale','2020-10-02','0.903687807534156','63','EE333');\n",
+      "insert into customers (customernumber,customername,phonenumber,postalcode,locale,datecreated,email) values ('684','hwjkmomcxclttfrprekb','6066689','spjp','','2020-09-27','zcdm@jrhr.com');\n",
+      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('684','760','szohatnzev','2020-09-27','sale','2020-10-07','0.8988326363860707','4','AA111');\n",
+      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('684','803','xofpgoqeus','2020-09-27','sale','2020-10-04','0.19108411492833466','78','FF4444');\n",
+      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('684','576','kgoznyhqdc','2020-09-27','sale','2020-10-04','0.08903489768729822','17','BB111');\n",
+      "insert into customers (customernumber,customername,phonenumber,postalcode,locale,datecreated,email) values ('927','uudxmgknewwyelcrnpnv','8864647','zaei','','2020-09-27','bild@ouoy.com');\n",
+      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('927','561','cxdwtdaocc','2020-09-27','sale','2020-10-08','0.3189666702824382','18','AA111');\n",
+      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('927','267','qfjfwcmbxq','2020-09-27','sale','2020-10-05','0.07075675997223829','63','BB111');\n",
+      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('927','445','vjpvgeljvm','2020-09-27','sale','2020-10-03','0.7011478779554541','55','CC222');\n",
+      "insert into customers (customernumber,customername,phonenumber,postalcode,locale,datecreated,email) values ('972','efzhdmowkthjdsowmaxd','4701253','prte','','2020-09-27','vylx@fybz.com');\n",
+      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('972','919','bvoxpmnljo','2020-09-27','sale','2020-10-07','0.07081445038301548','41','AA111');\n",
+      "insert into customers (customernumber,customername,phonenumber,postalcode,locale,datecreated,email) values ('466','ojiruhhhoooyadzgweqr','8394165','mshz','','2020-09-27','iicc@tcpw.com');\n",
+      "insert into orders (customernumber,ordernumber,comments,orderdate,ordertype,shipdate,discount,quantity,productnumber) values ('466','934','bvuqjaqdkx','2020-09-27','sale','2020-10-05','0.5516502790684329','98','AA111');\n"
      ]
     }
    ],
@@ -321,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
