--- a/paphosWeatherCSV.ipynb
+++ b/paphosWeatherCSV.ipynb
@@ -33,13 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "import simplejson as json\n",
     "from datetime import date\n",
     "from datetime import datetime\n",
+    "import time\n",
+    "\n",
     "\n",
     "def toDate(str):\n",
     "    return datetime.strptime(str, '%Y-%m-%d %H:%M')\n",
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +60,11 @@
     "p.write(\"temp,temp_min,temp_max,pressure,humidity,speed,deg,main,description,dt_iso\\n\")\n",
     "for l in f:\n",
     "    w=json.loads(l)\n",
-    "    dt_iso=toDate(w['dt_iso'][0:16])\n",
-    "    if dt_iso.month in (9,10,11,12,1,2,3,4):\n",
-    "        dt_iso=datetime.strftime(dt_iso, '%Y-%m-%d %H:%M:%S')\n",
+    "    #dt_iso=toDate(w['dt_iso'][0:16])\n",
+    "    dt = time.localtime(w['dt'])\n",
+    "    if dt.tm_mon in (9,10,11,12,1,2,3,4):\n",
+    "        #dt_iso=datetime.strftime(dt_iso, '%Y-%m-%d %H:%M:%S')\n",
+    "        epoch = w['dt']\n",
     "        temp=w['main']['temp']\n",
     "        temp_min=w['main']['temp_min']\n",
     "        temp_max=w['main']['temp_max']\n",
@@ -70,9 +74,9 @@
     "        deg=w['wind']['deg']\n",
     "        main=w['weather'][0]['main']\n",
     "        description=w['weather'][0]['description']\n",
-    "        sql=\"'{9}',{0},{1},{2},{3},{4},{5},{6},'{7}','{8}'\". \\\n",
+    "        sql=\"{9},{0},{1},{2},{3},{4},{5},{6},'{7}','{8}'\". \\\n",
     "             format(temp  , temp_min , temp_max  , pressure , \\\n",
-    "        humidity , speed , deg , main ,description, dt_iso  )\n",
+    "        humidity , speed , deg , main ,description, epoch   )\n",
     "        p.write(sql + '\\n')\n",
     "        \n",
     "f.close()\n",
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -91,13 +95,42 @@
        "19"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len('2020-09-12 14:00:00')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt=time.localtime(1599930000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.tm_mon"
    ]
   },
   {
