--- a/wise.ipynb
+++ b/wise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 27,
    "id": "b807ec38",
    "metadata": {},
    "outputs": [],
@@ -10,14 +10,27 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "\n",
+    "\n",
+    "def stripWords(s):\n",
+    "\n",
+    "    word = s\n",
+    "    words = ['Sent', 'money', 'to', 'Card', 'transaction', 'of', 'issued', 'by'] \n",
+    "    for w in words:\n",
+    "        word = word.replace(w, '')\n",
+    "    return word\n",
+    "\n",
     "f='/Users/walkerrowe/Downloads/wise.csv'\n",
     "\n",
     "df = pd.read_csv(f)\n",
     "\n",
+    "euro = 1.16\n",
+    "\n",
     "dt=pd.Series(df['Date'].map(lambda l : l[3:5]    + '/' + l[0:2] + '/' +    l[-4:]))\n",
     " \n",
-    "payee=pd.Series(df['Description'],name=\"Payee\")\n",
-    "amount=pd.Series(df['Amount'].astype('float'))\n",
+    "vendor=pd.Series(df['Description'],name=\"Payee\")\n",
+    "payee=vendor.apply(stripWords)\n",
+    "amount=pd.Series(df['Amount'].astype('float')) * euro\n",
     "\n",
     "\n",
     "simplifi=pd.DataFrame([dt,payee,amount]).transpose()\n",
@@ -28,16 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "76ab190d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "a576614d",
+   "id": "80692f47",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -59,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
