--- a/wise.ipynb
+++ b/wise.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "id": "b807ec38",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
+    "import re\n",
     "\n",
     "\n",
     "def stripWords(s):\n",
@@ -18,7 +18,17 @@
     "    words = ['Sent', 'money', 'to', 'Card', 'transaction', 'of', 'issued', 'by'] \n",
     "    for w in words:\n",
     "        word = word.replace(w, '')\n",
-    "    return word\n",
+    "        \n",
+    "        \n",
+    "    a=word    \n",
+    "    a=re.sub('\\d','',a)\n",
+    "    b=re.sub('\\d','',a)\n",
+    "    c=re.sub('\\.','',b)\n",
+    "    d=re.sub('Eur','',c)\n",
+    "    e=re.sub('EUR','',d)\n",
+    "    f=re.sub('PAPHOS','',e)\n",
+    "     \n",
+    "    return f.strip()\n",
     "\n",
     "f='/Users/walkerrowe/Downloads/wise.csv'\n",
     "\n",
@@ -33,7 +43,7 @@
     "amount=pd.Series(df['Amount'].astype('float')) * euro\n",
     "\n",
     "\n",
-    "simplifi=pd.DataFrame([dt,payee,amount]).transpose()\n",
+    "simplifi=pd.DataFrame([dt,payee,amount.round(2)]).transpose()\n",
     "\n",
     "simplifi.to_csv(f+'wise.csv',sep=\",\",line_terminator='\\n',index=False)\n",
     " "
@@ -42,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80692f47",
+   "id": "527e0c19",
    "metadata": {},
    "outputs": [],
    "source": []
