--- a/revolut.ipynb
+++ b/revolut.ipynb
@@ -22,22 +22,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "d6179a81",
    "metadata": {},
    "outputs": [],
    "source": [
     "df=euros\n",
     "dt=pd.Series(df['Started Date'].astype(str).map(lambda l : l[5:7]    + '/' + l[8:10] + '/' +    l[:4]),name=\"Date\") \n",
-    "vendor=pd.Series(df['Description'])\n",
+    "payee=pd.Series(df['Description'],name=\"Payee\")\n",
     "amount=pd.Series(df['Amount'].astype('float')) * euro\n",
-    "eurosDF=pd.DataFrame([dt,vendor,amount.round(2)]).transpose()\n",
+    "eurosDF=pd.DataFrame([dt,payee,amount.round(2)]).transpose()\n",
     "\n",
     "df=dollars\n",
     "dt=pd.Series(df['Started Date'].astype(str).map(lambda l : l[5:7]    + '/' + l[8:10] + '/' +    l[:4]),name=\"Date\")\n",
-    "vendor=pd.Series(df['Description'])\n",
+    "payee=pd.Series(df['Description'],name=\"Payee\")\n",
     "amount=pd.Series(df['Amount'].astype('float'))\n",
-    "dollarsDF=pd.DataFrame([dt,vendor,amount.round(2)]).transpose()\n",
+    "dollarsDF=pd.DataFrame([dt,payee,amount.round(2)]).transpose()\n",
     "\n",
     "simplifi=pd.concat([eurosDF,dollarsDF])\n",
     "\n",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7430a577",
+   "id": "70fd589d",
    "metadata": {},
    "outputs": [],
    "source": []
