--- a/revolut.ipynb
+++ b/revolut.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "6340a4da",
+   "execution_count": 32,
+   "id": "b807ec38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,43 +11,32 @@
     "import numpy as np\n",
     "import re\n",
     "\n",
-    "eur=1.14\n",
+    "\n",
     " \n",
-    "f='/home/walker/Downloads/revolut.xlsx'\n",
-    "df = pd.read_excel(f,sheet_name='usd')\n",
-    "dollars=df[df['Type'].isin(['CARD_PAYMENT','TRANSFER'])]\n",
-    "df = pd.read_excel(f,sheet_name='eur')\n",
-    "euros=df[df['Type'].isin(['CARD_PAYMENT','TRANSFER'])]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "d6179a81",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df=euros\n",
-    "dt=pd.Series(df['Started Date'].astype(str).map(lambda l : l[5:7]    + '/' + l[8:10] + '/' +    l[:4]),name=\"Date\") \n",
+    "f='/Users/walkerrowe/Downloads/revolut.xlsx'\n",
+    "\n",
+    "df = pd.read_excel(f,sheet_name='euros')\n",
+    "\n",
+    "euro = 1.16\n",
+    "\n",
+    "\n",
+    "\n",
+    "dt=pd.Series(df['Started Date'].astype(str).map(lambda l : l[5:7]    + '/' + l[8:10] + '/' +    l[0:4]),name=\"Date\")\n",
+    " \n",
     "payee=pd.Series(df['Description'],name=\"Payee\")\n",
     "amount=pd.Series(df['Amount'].astype('float')) * euro\n",
-    "eurosDF=pd.DataFrame([dt,payee,amount.round(2)]).transpose()\n",
     "\n",
-    "df=dollars\n",
-    "dt=pd.Series(df['Started Date'].astype(str).map(lambda l : l[5:7]    + '/' + l[8:10] + '/' +    l[:4]),name=\"Date\")\n",
-    "payee=pd.Series(df['Description'],name=\"Payee\")\n",
-    "amount=pd.Series(df['Amount'].astype('float'))\n",
-    "dollarsDF=pd.DataFrame([dt,payee,amount.round(2)]).transpose()\n",
     "\n",
-    "simplifi=pd.concat([eurosDF,dollarsDF])\n",
+    "simplifi=pd.DataFrame([dt,payee,amount.round(2)]).transpose()\n",
     "\n",
-    "simplifi.to_csv(f+'revolut.csv',sep=\",\",line_terminator='\\n',index=False)"
+    "simplifi.to_csv(f+'wise.csv',sep=\",\",line_terminator='\\n',index=False)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70fd589d",
+   "id": "de501aab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -69,7 +58,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
